Adds NDC Copenhagen 2020 to the speaking schedule

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -28,6 +28,16 @@ redirect_from: /tag/speaking/
     </div>
   </h4>
 
+  <p></p>
+
+  <h4>
+      <span><a href="https://ndccopenhagen.com/speaker/enrico-campidoglio/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> NDC Copenhagen 2020</a></span>
+    <div class="nowrap">
+      <span class="inline-info">April 1–3, 2020</span><span class="hide">—</span>
+      <span class="inline-info">Copenhagen, Denmark</span><span class="flag-icon flag-icon-dk"></span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
