Adds DevSum 2020 to the speaking schedule

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -38,6 +38,16 @@ redirect_from: /tag/speaking/
     </div>
   </h4>
 
+  <p></p>
+
+  <h4>
+      <span><a href="https://www.devsum.se/speakers/enrico-campidoglio" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> DevSum 2020</a></span>
+    <div class="nowrap">
+      <span class="inline-info">May 28–29, 2020</span><span class="hide">—</span>
+      <span class="inline-info">Stockholm, Sweden</span><span class="flag-icon flag-icon-se"></span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
