Adds Techorama 2020 to the speaking schedule

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -48,6 +48,16 @@ redirect_from: /tag/speaking/
     </div>
   </h4>
 
+  <p></p>
+
+  <h4>
+      <span><a href="https://techorama.be/speakers/speaker/enrico-campidoglio/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Techorama 2020</a></span>
+    <div class="nowrap">
+      <span class="inline-info">June 2–4, 2020</span><span class="hide">—</span>
+      <span class="inline-info">Antwerp, Belgium</span><span class="flag-icon flag-icon-be"></span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
