Adds Techorama 2020 to the workshop schedule

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -47,6 +47,16 @@ image: backdrop.jpg
     </div>
   </h4>
 
+  <p></p>
+
+  <h4>
+    <span><a href="https://techorama.be/workshops/mastering-git-beyond-the-command-line/" target="_blank">Techorama 2020</a></span>
+    <div class="nowrap">
+      <span class="inline-info">June 2, 2020</span><span class="hide">—</span>
+      <span class="inline-info">Antwerp, Belgium</span><span class="flag-icon flag-icon-be"></span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="building_a_deployment_pipeline_with_csharp_and_cake">
