Adds .NET Rocks episode 1680 to the podcasts
https://www.dotnetrocks.com/?show=1680

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -64,6 +64,18 @@ redirect_from: /tag/speaking/
   <p>
     Here's a list of podcasts I have been a guest on:
   </p>
+  
+  <h4 id="dotnetrocks_1680">.NET Rocks! 1680 <span class="hide">—</span> <a href="https://www.dotnetrocks.com/?show=1680" target="_blank"><i class="fa fa-podcast" aria-hidden="true"></i> GitHub Actions with Enrico Campidoglio</a></h4>
+  <p>With the release of my Pluralsight course <a href="https://www.pluralsight.com/courses/building-custom-github-actions" target="_blank">"Building Custom GitHub Actions"</a>, I talked to Carl and Richard about GitHub's CI/CD solution and how it compares to similar offerings like Azure Pipelines. We discussed topics such as GitHub's value proposition, the influence of Microsoft owning GitHub and the role of Continuous Integration in the era of DevOps. Also, the philosophical differences between <a href="#dotnetrocks_1680_clip">cars and carpets</a>.</p>
+  
+  <figure>
+    <audio id="dotnetrocks_1680_clip"
+           controls
+           src="/assets/speaking/dotnetrocks-1680-cars-and-carpets.m4a">
+      Your browser does not support the <code>audio</code> element.
+    </audio>
+    <figcaption><a href="https://www.dotnetrocks.com/?show=1680">.NET Rocks! 1680</a> — Cars and Carpets</figcaption>
+  </figure>
 
   <h4 id="developer_on_fire_414">Developer On Fire 414 <span class="hide">—</span> <a href="https://developeronfire.com/podcast/episode-414-enrico-campidoglio-clean-history" target="_blank"><i class="fa fa-podcast" aria-hidden="true"></i> Enrico Campidoglio — Clean History</a></h4>
   <p>I had a lovely conversation with <a href="https://developeronfire.com/about-the-host/" target="_blank">Dave Rael</a> about what "<em>fires me up</em>" and keeps me going as programmer and teacher. Some of the topics we talked about include how I got into <a href="/services/">teaching</a>, my move from Italy to Sweden, the eternal debate of true vs. clean history in Git and, of course, some computer history with my old <a href="https://en.wikipedia.org/wiki/Olivetti_M24" target="_blank">Olivetti M24</a>.</p>
