Adds a clip from Developer On Fire episode 414
https://developeronfire.com/podcast/episode-414-enrico-campidoglio-clean
-history

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -79,6 +79,15 @@ redirect_from: /tag/speaking/
 
   <h4 id="developer_on_fire_414">Developer On Fire 414 <span class="hide">—</span> <a href="https://developeronfire.com/podcast/episode-414-enrico-campidoglio-clean-history" target="_blank"><i class="fa fa-podcast" aria-hidden="true"></i> Enrico Campidoglio — Clean History</a></h4>
   <p>I had a lovely conversation with <a href="https://developeronfire.com/about-the-host/" target="_blank">Dave Rael</a> about what "<em>fires me up</em>" and keeps me going as programmer and teacher. Some of the topics we talked about include how I got into <a href="/services/">teaching</a>, my move from Italy to Sweden, the eternal debate of true vs. clean history in Git and, of course, some computer history with my old <a href="https://en.wikipedia.org/wiki/Olivetti_M24" target="_blank">Olivetti M24</a>.</p>
+  
+  <figure>
+    <audio id="developer_on_fire_414_clip"
+           controls
+           src="/assets/speaking/developer-on-fire-414-my-first-computer.m4a">
+      Your browser does not support the <code>audio</code> element.
+    </audio>
+    <figcaption><a href="https://developeronfire.com/podcast/episode-414-enrico-campidoglio-clean-history">Developer On Fire 414</a> — My First Computer</figcaption>
+  </figure>
 
   <h4 id="dotnetrocks_1079">.NET Rocks! 1079 <span class="hide">—</span> <a href="https://www.dotnetrocks.com/?show=1079" target="_blank"><i class="fa fa-podcast" aria-hidden="true"></i> Databases in Continuous Delivery</a></h4>
   <p>While I was at NDC London 2014, I spoke to Carl and Richard about including
