Adds NDC Oslo 2020 to the workshop schedule

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -57,6 +57,16 @@ image: backdrop.jpg
     </div>
   </h4>
 
+  <p></p>
+
+  <h4>
+    <span><a href="https://ndcoslo.com/workshop/building-a-deployment-pipeline-with-c-and-cake/" target="_blank">NDC Oslo 2020</a></span>
+    <div class="nowrap">
+      <span class="inline-info">June 8–9, 2020</span><span class="hide">—</span>
+      <span class="inline-info">Oslo, Norway</span><span class="flag-icon flag-icon-no"></span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="building_a_deployment_pipeline_with_csharp_and_cake">
