--- a/speaking/index.html
+++ b/speaking/index.html
@@ -58,6 +58,16 @@ redirect_from: /tag/speaking/
     </div>
   </h4>
 
+  <p></p>
+
+  <h4>
+      <span><a href="https://ndcoslo.com/speaker/enrico-campidoglio/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> NDC Oslo 2020</a></span>
+    <div class="nowrap">
+      <span class="inline-info">June 8–12, 2020</span><span class="hide">—</span>
+      <span class="inline-info">Oslo, Norway</span><span class="flag-icon flag-icon-no"></span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
