--- a/workshops/index.html
+++ b/workshops/index.html
@@ -70,7 +70,7 @@ image: backdrop.jpg
   <hr/>
 
   <h2 id="building_a_deployment_pipeline_with_csharp_and_cake">
-    <span class="nowrap">Building a Deployment</span>&nbsp;<span class="nowrap">Pipeline with C# and Cake</span><br/>
+    <span class="nowrap">Building a Deployment Pipeline</span>&nbsp;<span class="nowrap">with C# and Cake</span><br/>
     <span class="subtitle">2 Days</span>
   </h2>
 
