--- a/workshops/index.html
+++ b/workshops/index.html
@@ -19,6 +19,13 @@ image: backdrop.jpg
 
   <p>Here's a list of my upcoming public workshops. Please, follow the link to the event's page for availability and bookings.</p>
 
+    <h4>
+    <span><a href="https://programutvikling.no/slot/building-a-deployment-pipeline-with-c-and-cake" target="_blank">Programutvikling</a></span>
+    <div class="nowrap">
+      <span class="inline-info">On demand — Online 🌍</span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="building_a_deployment_pipeline_with_csharp_and_cake">
