--- a/speaking/index.html
+++ b/speaking/index.html
@@ -68,6 +68,16 @@ redirect_from: /tag/speaking/
     </div>
   </h4>
 
+  <p></p>
+
+  <h4>
+      <span><a href="https://ndc-london.com/speakers/enrico-campidoglio" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> NDC London 2021</a></span>
+    <div class="nowrap">
+      <span class="inline-info">January 25–29, 2021</span><span class="hide">—</span>
+      <span class="inline-info">Online Event 🌍</span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
