--- a/speaking/index.html
+++ b/speaking/index.html
@@ -28,6 +28,16 @@ redirect_from: /tag/speaking/
     </div>
   </h4>
 
+  <p></p>
+
+  <h4>
+      <span><a href="https://techorama.be/speakers/speaker/enrico-campidoglio" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Techorama 2021</a></span>
+    <div class="nowrap">
+      <span class="inline-info">May 17–19, 2021</span><span class="hide">—</span>
+      <span class="inline-info">Online Event 🌍</span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
