Adds the testimonial from Spectrum

--- a/services/index.html
+++ b/services/index.html
@@ -111,6 +111,12 @@ redirect_from:
   </blockquote>
   <span>— Edith Lesage, Automation Platform Expert, Alfa Laval</span>
 
+  <img class="customerlogo" src="/assets/services/spectrum.png" />
+  <blockquote class="testimonial">
+    <p>We had the pleasure of inviting Enrico to a conference. Enrico delivered a very professional presentation with passion and knowledge. No question went unanswered and all our developers, from the seasoned Git veteran to the beginner, were happy.</p>
+  </blockquote>
+  <span>— Ola Randerz, Business Area Manager, Spectrum Digital Solutions</span>
+
   <img class="customerlogo" src="/assets/services/jyskebank.png" />
   <blockquote class="testimonial">
     <p>I've had the pleasure of holding a Meetup with Enrico Campidoglio.<br/>
