Adds the Git talk at Charlie Foxtrot to the speaking schedule

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -38,6 +38,16 @@ redirect_from: /tag/speaking/
     </div>
   </h4>
 
+  <p></p>
+
+  <h4>
+      <span><a href="https://www.eventbrite.se/e/understanding-git-from-the-ground-up-biljetter-204409994797" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Charlie Foxtrot</a></span>
+    <div class="nowrap">
+      <span class="inline-info">November 24, 2021</span><span class="hide">—</span>
+      <span class="inline-info">Lund, Sweden</span><span class="flag-icon flag-icon-se"></span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
