Adds the TDD talk from NDC London 2021

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -98,6 +98,15 @@ redirect_from: /tag/speaking/
   <h2 id="presentations">Presentations</h2>
   <p>Here's a selection of some of my most popular presentations from recent years. I linked to the <em>slides</em> and <em>demo material</em> as they were available. If a talk was recorded, I made sure to include a link to the <em>video</em> as well.</p>
 
+  <h4 id="dry_tdd">DRY TDD with AutoFixture <a href="https://youtu.be/1V-Htcc3fW0"><i class="fa fa-play-circle" aria-hidden="true"></i> NDC London 2021</a></h4>
+  <p class="thumbnail-caption">
+    <a href="https://youtu.be/1V-Htcc3fW0">
+      <img src="{{ site.url }}/assets/{{ page.assets }}/ndclondon2021-enricocampidoglio-preview.png"
+           class="thumbnail-video" />
+    </a>
+    In this talk, I show you how to write DRY tests by leveraging an open source library called <a href="https://github.com/AutoFixture/AutoFixture/" target="_blank">AutoFixture</a>.<br/><a href="https://github.com/AutoFixture/AutoFixture/" target="_blank">AutoFixture</a> lets you set up your test scenarios by runtime-generating data that meets your requirements.<br/>By not repeating the same boilerplate setup code everywhere, your tests will have minimal coupling to your production code.<br/>They will be your safety net while also giving you the freedom to refactor your production code as you see fit.
+  </p>
+
   <h4 id="effective_git">How Effective Teams Use Git<br/><a href="https://youtu.be/yXixyZ5ch3c"><i class="fa fa-play-circle" aria-hidden="true"></i> NDC DevOps 2020</a> <a href="https://youtu.be/yP7DAdZAdTw"><i class="fa fa-play-circle" aria-hidden="true"></i> NDC Oslo 2020</a></h4>
   <p class="thumbnail-caption">
     <a href="https://youtu.be/yXixyZ5ch3c">
