--- a/speaking/index.html
+++ b/speaking/index.html
@@ -20,6 +20,14 @@ redirect_from: /tag/speaking/
   <h2 id="schedule">Schedule</h2>
   <p>I keep a list of my upcoming talks at conferences and user groups.</p>
 
+  <h4>
+      <span><a href="https://www.devsum.se/agenda/git-hidden-gems" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> DevSum 2022</a></span>
+    <div class="nowrap">
+      <span class="inline-info">May 19–20, 2022</span><span class="hide">—</span>
+      <span class="inline-info">Stockholm, Sweden</span><span class="flag-icon flag-icon-se"></span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
