Adds Swetugg 2022 to the speaking schedule

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -28,6 +28,14 @@ redirect_from: /tag/speaking/
     </div>
   </h4>
 
+  <h4>
+      <span><a href="https://www.swetugg.se/gbg-2022/speakers/enrico-campidoglio" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Swetugg 2022</a></span>
+    <div class="nowrap">
+      <span class="inline-info">September 19, 2022</span><span class="hide">—</span>
+      <span class="inline-info">Gothenburg, Sweden</span><span class="flag-icon flag-icon-se"></span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
