Adds Techorama NL 2022 to the speaking schedule

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -36,6 +36,14 @@ redirect_from: /tag/speaking/
     </div>
   </h4>
 
+  <h4>
+      <span><a href="https://techorama.nl/speakers/session/git-hidden-gems/" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Techorama NL 2022</a></span>
+    <div class="nowrap">
+      <span class="inline-info">October 11–12, 2022</span><span class="hide">—</span>
+      <span class="inline-info">Utrecht, Netherlands</span><span class="flag-icon flag-icon-nl"></span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
