Adds NDC Oslo 2023 to the speaking schedule

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -48,6 +48,16 @@ redirect_from: /tag/speaking/
     </div>
   </h4>
 
+  <p></p>
+
+  <h4>
+      <span><a href="https://ndcoslo.com/speakers/enrico-campidoglio" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> NDC Oslo 2023</a></span>
+    <div class="nowrap">
+      <span class="inline-info">May 24–26, 2023</span><span class="hide">—</span>
+      <span class="inline-info">Oslo, Norway</span><span class="flag-icon flag-icon-no"></span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
