--- a/speaking/index.html
+++ b/speaking/index.html
@@ -48,6 +48,16 @@ redirect_from: /tag/speaking/
     </div>
   </h4>
 
+  <p></p>
+
+  <h4>
+      <span><a href="https://cphdevfest.com/speakers/enrico-campidoglio" target="_blank"><i class="fa fa-microphone" aria-hidden="true"></i> Copenhagen Developers Festival 2023</a></span>
+    <div class="nowrap">
+      <span class="inline-info">August 28–September 1, 2023</span><span class="hide">—</span>
+      <span class="inline-info">Copenhagen, Denmark</span><span class="flag-icon flag-icon-dk"></span>
+    </div>
+  </h4>
+
   <hr/>
 
   <h2 id="podcasts">Podcasts</h2>
