Adds a few links to the speaking page

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -9,10 +9,7 @@ redirect_from: /tag/speaking/
 <div id="home">
   <h1 class="backdrop speaking">Speaking</h1>
   <p>
-    Going out and meet the developer community while giving technical talks is something I
-    truly enjoy. Whether it be at a big conference, a user group or at a
-    client, I love sharing knowledge and experiences. And the best part is, it
-    goes both ways: with every presentation, I teach something and learn something new myself.
+  Going out and meeting the developer community while giving <a href="#presentations">technical talks</a> is something I truly enjoy. Whether it be at a <a href="/git/#testimonials">big conference</a>, a user group or at <a href="/services/#testimonials">a client</a>, I love sharing knowledge. And the best part is, it goes both ways: with every presentation, I teach something and learn something new myself.
   </p>
 
   <hr/>
