Links directly to the Pluralsight author page in the sidebar and about page

--- a/about/index.html
+++ b/about/index.html
@@ -33,11 +33,11 @@ title: Enrico Campidoglio
 
   <h3>Online Courses</h3>
 
-  <a href="https://bit.ly/ps-ecampidoglio" target="_blank">
+  <a href="https://www.pluralsight.com/authors/enrico-campidoglio" target="_blank">
     <img class="pluralsightlogo" alt="Pluralsight logo" src="/assets/about/pluralsight-logo.png" />
   </a>
 
-  <p>In 2015, I started producing online training for <a href="https://www.pluralsight.com" target="_blank">Pluralsight</a>. You can find my curriculum of courses on my <a href="https://bit.ly/ps-ecampidoglio" target="_blank">author page</a>.</p>
+  <p>In 2015, I started producing online training for <a href="https://www.pluralsight.com" target="_blank">Pluralsight</a>. You can find my curriculum of courses on my <a href="https://www.pluralsight.com/authors/enrico-campidoglio" target="_blank">author page</a>.</p>
 
   <h3>Open Source</h3>
 
